# RepoRadar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy-frontend.yml
app/: config.py  main.py  rate_limit.py
app/api/: auth.py  dependencies.py  routes.py
app/models/: domain.py  schemas.py
app/services/: embedder.py  github_client.py  indexer.py  preprocessor.py  vector_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css  test-setup.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: client.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: LoadingState.tsx  ResultCard.tsx  ResultsList.tsx  SearchInput.tsx  ThemeToggle.tsx  WeightSliders.tsx
frontend/src/components/__tests__/: LoadingState.test.tsx  ResultCard.test.tsx  ResultsList.test.tsx  SearchInput.test.tsx  ThemeToggle.test.tsx  WeightSliders.test.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/hooks/__tests__/: useTheme.test.ts
frontend/src/types/: api.ts
scripts/: seed_initial.py  update_stale.py
tests/: test_api.py  test_auth.py  test_embedder.py  test_github_client.py  test_indexer.py  test_main.py  test_preprocessor.py  test_schemas.py  test_search_similar.py  test_vector_store.py
